--- a/src/Makefile
+++ b/src/Makefile
@@ -1,110 +1,317 @@
-## TODO: revise, cleanup
 
-# Name: Makefile
-# Project: xomg's DMX Dimmer
-# Author: xomg (based on Christian Starkjohann's USBaspLoader)
-# Creation Date: 
-# Tabsize: 4
-# Copyright:
-# License: GNU GPL v3 (see LICENSE)
-# This Revision: 
+#########  AVR Project Makefile Template   #########
+######                                        ######
+######    Copyright (C) 2003-2005,Pat Deegan, ######
+######            Psychogenic Inc             ######
+######          All Rights Reserved           ######
+######                                        ######
+###### You are free to use this code as part  ######
+###### of your own applications provided      ######
+###### you keep this copyright notice intact  ######
+###### and acknowledge its authorship with    ######
+###### the words:                             ######
+######                                        ######
+###### "Contains software by Pat Deegan of    ######
+###### Psychogenic Inc (www.psychogenic.com)" ######
+######                                        ######
+###### If you use it as part of a web site    ######
+###### please include a link to our site,     ######
+###### http://electrons.psychogenic.com  or   ######
+###### http://www.psychogenic.com             ######
+######                                        ######
+####################################################
 
-###############################################################################
-# Configure the following variables according to your AVR.
-# Program the device with
-#     make fuse    # to set the clock generator, boot section size etc.
-#     make flash   # to load the boot loader into flash
 
-F_CPU = 16000000
-DEVICE = atmega168
+##### This Makefile will make compiling Atmel AVR 
+##### micro controller projects simple with Linux 
+##### or other Unix workstations and the AVR-GCC 
+##### tools.
+#####
+##### It supports C, C++ and Assembly source files.
+#####
+##### Customize the values as indicated below and :
+##### make
+##### make disasm 
+##### make stats 
+##### make hex
+##### make writeflash
+##### make gdbinit
+##### or make clean
+#####
+##### See the http://electrons.psychogenic.com/ 
+##### website for detailed instructions
 
-FUSEOPT = -U hfuse:w:0xd6:m -U lfuse:w:0xdf:m -U efuse:w:0x07:m
 
-# You may have to change the order of these -U commands.
+####################################################
+#####                                          #####
+#####              Configuration               #####
+#####                                          #####
+##### Customize the values in this section for #####
+##### your project. MCU, PROJECTNAME and       #####
+##### PRJSRC must be setup for all projects,   #####
+##### the remaining variables are only         #####
+##### relevant to those needing additional     #####
+##### include dirs or libraries and those      #####
+##### who wish to use the avrdude programmer   #####
+#####                                          #####
+##### See http://electrons.psychogenic.com/    #####
+##### for further details.                     #####
+#####                                          #####
+####################################################
 
-#---------------------------------------------------------------------
-# ATMega88, ATMega168
-#---------------------------------------------------------------------
-# Fuse extended byte:
-# 0x07 = 0 0 0 0   0 1 1 1 <-- BOOTRST (1: boot reset vector at 0x0000)
-#                    \+/
-#                     +------- BOOTSZ (11 = 256 bytes)
-# Fuse high byte:
-# 0xd6 = 1 1 0 1   0 1 1 0
-#        ^ ^ ^ ^   ^ \-+-/
-#        | | | |   |   +------ BODLEVEL 0..2 (110 = 1.8 V)
-#        | | | |   + --------- EESAVE (preserve EEPROM over chip erase)
-#        | | | +-------------- WDTON (0: watchdog always on)
-#        | | +---------------- SPIEN (0: allow serial programming)
-#        | +------------------ DWEN (1: debug wire disable)
-#        +-------------------- RSTDISBL (1: reset pin enabled)
-# Fuse low byte:
-# 0xdf = 1 1 0 1   1 1 1 1
-#        ^ ^ \ /   \--+--/
-#        | |  |       +------- CKSEL 3..0 (external >8M crystal)
-#        | |  +--------------- SUT 1..0 (crystal osc, BOD enabled)
-#        | +------------------ CKOUT (if 0: Clock output enabled)
-#        +-------------------- CKDIV8 (if 0: divide by 8)
-#---------------------------------------------------------------------
 
-##########################################################################
+#####         Target Specific Details          #####
+#####     Customize these for your project     #####
 
-# Tools:
-PROGRAMMER = -c usbasp #-P avrdoper
-AVRDUDE = avrdude $(PROGRAMMER) -p $(DEVICE)
-CC = avr-gcc
+# Name of target controller 
+# (e.g. 'at90s8515', see the available avr-gcc mmcu 
+# options for possible values)
+MCU=atmega168
 
-# Options:
-DEFINES = #-DDEBUG_LEVEL=2
-# Remove the -fno-* options when you use gcc 3, it does not understand them
-CFLAGS = -Wall -Os -fno-move-loop-invariants -fno-tree-scev-cprop -fno-inline-small-functions -I. -mmcu=$(DEVICE) -DF_CPU=$(F_CPU) $(DEFINES)
-LDFLAGS = -Wl,--relax,--gc-sections -Wl #,--section-start=.text=$(BOOTLOADER_ADDRESS)
+# id to use with programmer
+# default: PROGRAMMER_MCU=$(MCU)
+# In case the programer used, e.g avrdude, doesn't
+# accept the same MCU name as avr-gcc (for example
+# for ATmega8s, avr-gcc expects 'atmega8' and 
+# avrdude requires 'm8')
+PROGRAMMER_MCU=m168
 
-OBJECTS =  main.o
+# Name of our project
+# (use a single word, e.g. 'myproject')
+PROJECTNAME=dmxdimmer
 
-# symbolic targets:
-all: main.hex
+# Source files
+# List C/C++/Assembly source files:
+# (list all files to compile, e.g. 'a.c b.cpp as.S'):
+# Use .cc, .cpp or .C suffix for C++ files, use .S 
+# (NOT .s !!!) for assembly source code files.
+PRJSRC=main.c
 
-.c.o:
+# additional includes (e.g. -I/path/to/mydir)
+INC=-I.
+
+# libraries to link in (e.g. -lmylib)
+LIBS=
+
+# Optimization level, 
+# use s (size opt), 1, 2, 3 or 0 (off)
+OPTLEVEL=s
+
+
+#####      AVR Dude 'writeflash' options       #####
+#####  If you are using the avrdude program
+#####  (http://www.bsdhome.com/avrdude/) to write
+#####  to the MCU, you can set the following config
+#####  options and use 'make writeflash' to program
+#####  the device.
+
+
+# programmer id--check the avrdude for complete list
+# of available opts.  These should include stk500,
+# avr910, avrisp, bsd, pony and more.  Set this to
+# one of the valid "-c PROGRAMMER-ID" values 
+# described in the avrdude info page.
+# 
+AVRDUDE_PROGRAMMERID=usbasp
+
+# port--serial or parallel port to which your 
+# hardware programmer is attached
+#
+AVRDUDE_PORT=/dev/ttyS1
+
+
+####################################################
+#####                Config Done               #####
+#####                                          #####
+##### You shouldn't need to edit anything      #####
+##### below to use the makefile but may wish   #####
+##### to override a few of the flags           #####
+##### nonetheless                              #####
+#####                                          #####
+####################################################
+
+
+##### Flags ####
+
+# HEXFORMAT -- format for .hex file output
+HEXFORMAT=ihex
+
+# compiler
+CFLAGS=-I. $(INC) -g -mmcu=$(MCU) -O$(OPTLEVEL) \
+	-fpack-struct -fshort-enums             \
+	-funsigned-bitfields -funsigned-char    \
+	-Wall -Wstrict-prototypes               \
+	-Wa,-ahlms=$(firstword                  \
+	$(filter %.lst, $(<:.c=.lst)))
+
+# c++ specific flags
+CPPFLAGS=-fno-exceptions               \
+	-Wa,-ahlms=$(firstword         \
+	$(filter %.lst, $(<:.cpp=.lst))\
+	$(filter %.lst, $(<:.cc=.lst)) \
+	$(filter %.lst, $(<:.C=.lst)))
+
+# assembler
+ASMFLAGS =-I. $(INC) -mmcu=$(MCU)        \
+	-x assembler-with-cpp            \
+	-Wa,-gstabs,-ahlms=$(firstword   \
+		$(<:.S=.lst) $(<.s=.lst))
+
+
+# linker
+LDFLAGS=-Wl,-Map,$(TRG).map -mmcu=$(MCU) \
+	-lm $(LIBS)
+
+##### executables ####
+CC=avr-gcc
+OBJCOPY=avr-objcopy
+OBJDUMP=avr-objdump
+SIZE=avr-size
+AVRDUDE=avrdude
+REMOVE=rm -f
+
+##### automatic target names ####
+TRG=$(PROJECTNAME).out
+DUMPTRG=$(PROJECTNAME).s
+
+HEXROMTRG=$(PROJECTNAME).hex 
+HEXTRG=$(HEXROMTRG) $(PROJECTNAME).ee.hex
+GDBINITFILE=gdbinit-$(PROJECTNAME)
+
+# Define all object files.
+
+# Start by splitting source files by type
+#  C++
+CPPFILES=$(filter %.cpp, $(PRJSRC))
+CCFILES=$(filter %.cc, $(PRJSRC))
+BIGCFILES=$(filter %.C, $(PRJSRC))
+#  C
+CFILES=$(filter %.c, $(PRJSRC))
+#  Assembly
+ASMFILES=$(filter %.S, $(PRJSRC))
+
+
+# List all object files we need to create
+OBJDEPS=$(CFILES:.c=.o)    \
+	$(CPPFILES:.cpp=.o)\
+	$(BIGCFILES:.C=.o) \
+	$(CCFILES:.cc=.o)  \
+	$(ASMFILES:.S=.o)
+
+# Define all lst files.
+LST=$(filter %.lst, $(OBJDEPS:.o=.lst))
+
+# All the possible generated assembly 
+# files (.s files)
+GENASMFILES=$(filter %.s, $(OBJDEPS:.o=.s)) 
+
+
+.SUFFIXES : .c .cc .cpp .C .o .out .s .S \
+	.hex .ee.hex .h .hh .hpp
+
+
+.PHONY: writeflash clean stats gdbinit stats
+
+# Make targets:
+# all, disasm, stats, hex, writeflash/install, clean
+all: $(TRG)
+
+disasm: $(DUMPTRG) stats
+
+stats: $(TRG)
+	$(OBJDUMP) -h $(TRG)
+	$(SIZE) $(TRG) 
+
+hex: $(HEXTRG)
+
+
+writeflash: hex
+	$(AVRDUDE) -c $(AVRDUDE_PROGRAMMERID)   \
+	 -p $(PROGRAMMER_MCU) -P $(AVRDUDE_PORT) -e        \
+	 -U flash:w:$(HEXROMTRG)
+
+install: writeflash
+
+$(DUMPTRG): $(TRG) 
+	$(OBJDUMP) -S  $< > $@
+
+
+$(TRG): $(OBJDEPS) 
+	$(CC) $(LDFLAGS) -o $(TRG) $(OBJDEPS)
+
+
+#### Generating assembly ####
+# asm from C
+%.s: %.c
+	$(CC) -S $(CFLAGS) $< -o $@
+
+# asm from (hand coded) asm
+%.s: %.S
+	$(CC) -S $(ASMFLAGS) $< > $@
+
+
+# asm from C++
+.cpp.s .cc.s .C.s :
+	$(CC) -S $(CFLAGS) $(CPPFLAGS) $< -o $@
+
+
+
+#### Generating object files ####
+# object from C
+.c.o: 
 	$(CC) $(CFLAGS) -c $< -o $@
 
-.S.o:
-	$(CC) $(CFLAGS) -x assembler-with-cpp -c $< -o $@
-# "-x assembler-with-cpp" should not be necessary since this is the default
-# file type for the .S (with capital S) extension. However, upper case
-# characters are not always preserved on Windows. To ensure WinAVR
-# compatibility define the file type manually.
 
-.c.s:
-	$(CC) $(CFLAGS) -S $< -o $@
+# object from C++ (.cc, .cpp, .C files)
+.cc.o .cpp.o .C.o :
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
-flash:	all
-	$(AVRDUDE) -U flash:w:main.hex:i
+# object from asm
+.S.o :
+	$(CC) $(ASMFLAGS) -c $< -o $@
 
-readflash:
-	$(AVRDUDE) -U flash:r:read.hex:i
 
-fuse:
-	$(AVRDUDE) $(FUSEOPT)
+#### Generating hex files ####
+# hex files from elf
+#####  Generating a gdb initialisation file    #####
+.out.hex:
+	$(OBJCOPY) -j .text                    \
+		-j .data                       \
+		-O $(HEXFORMAT) $< $@
 
-# doesn't work with avrdude
-#read_fuses:
-#	$(UISP) --rd_fuses
+.out.ee.hex:
+	$(OBJCOPY) -j .eeprom                  \
+		--change-section-lma .eeprom=0 \
+		-O $(HEXFORMAT) $< $@
 
+
+#####  Generating a gdb initialisation file    #####
+##### Use by launching simulavr and avr-gdb:   #####
+#####   avr-gdb -x gdbinit-myproject           #####
+gdbinit: $(GDBINITFILE)
+
+$(GDBINITFILE): $(TRG)
+	@echo "file $(TRG)" > $(GDBINITFILE)
+
+	@echo "target remote localhost:1212" \
+		                >> $(GDBINITFILE)
+
+	@echo "load"        >> $(GDBINITFILE) 
+	@echo "break main"  >> $(GDBINITFILE)
+	@echo "continue"    >> $(GDBINITFILE)
+	@echo
+	@echo "Use 'avr-gdb -x $(GDBINITFILE)'"
+
+
+#### Cleanup ####
 clean:
-	rm -f main.hex main.bin *.o main.s
+	$(REMOVE) $(TRG) $(TRG).map $(DUMPTRG)
+	$(REMOVE) $(OBJDEPS)
+	$(REMOVE) $(LST) $(GDBINITFILE)
+	$(REMOVE) $(GENASMFILES)
+	$(REMOVE) $(HEXTRG)
 
-# file targets:
-main.bin:	$(OBJECTS)
-	$(CC) $(CFLAGS) -o main.bin $(OBJECTS) $(LDFLAGS)
 
-main.hex:	main.bin
-	rm -f main.hex main.eep.hex
-	avr-objcopy -j .text -j .data -O ihex main.bin main.hex
-	avr-size main.hex
 
-disasm:	main.bin
-	avr-objdump -d main.bin
+#####                    EOF                   #####
 
-cpp:
-	$(CC) $(CFLAGS) -E main.c
