firmware: dirty but working zc, minor spi fixes
Zero crossing interrupt increments a counter and outs the value. CZ
circuit verified, works OK.

Seems that SPI still had OBOEs, reversing SPI clock polarity back to
normal seems to fix it.

Yeah, yeah, two separate things in one commit, I know.

--- a/src/Makefile
+++ b/src/Makefile
@@ -78,7 +78,7 @@ PROGRAMMER_MCU=m168
 
 # Name of our project
 # (use a single word, e.g. 'myproject')
-PROJECTNAME=dmxdimmer
+PROJECTNAME=dimmer
 
 # Source files
 # List C/C++/Assembly source files:
