code: dimmer: more refacoring

--- a/src/dimmer/Makefile
+++ b/src/dimmer/Makefile
@@ -85,7 +85,7 @@ PROJECTNAME=dimmer
 # (list all files to compile, e.g. 'a.c b.cpp as.S'):
 # Use .cc, .cpp or .C suffix for C++ files, use .S 
 # (NOT .s !!!) for assembly source code files.
-PRJSRC=main.c
+PRJSRC=fakedelay.c spi.c zc.c dimmer.c
 
 # additional includes (e.g. -I/path/to/mydir)
 INC=-I.
