code:trans: use received preheat and maxval values
This is done when sending the final values to the slaves instead of when
receiving them on USART. The latter is rather more time-dependent.

Right now, the appropriate chanval is modified in memory, so if preheat
and maxval change, the chanval will stay the same as the previous limiting
value. This will change soon.

--- a/src/transceiver/Makefile
+++ b/src/transceiver/Makefile
@@ -85,7 +85,7 @@ PROJECTNAME=transceiver
 # (list all files to compile, e.g. 'a.c b.cpp as.S'):
 # Use .cc, .cpp or .C suffix for C++ files, use .S 
 # (NOT .s !!!) for assembly source code files.
-PRJSRC=fakedelay.c usart.c spi.c transceiver.c
+PRJSRC=fakedelay.c usart.c spi.c adc.c transceiver.c
 
 # additional includes (e.g. -I/path/to/mydir)
 INC=-I.
