src: rename "dimmer" to "slave"
Less confision with commits/docs.

--- a/src/slave/Makefile
+++ b/src/slave/Makefile
@@ -78,14 +78,14 @@ PROGRAMMER_MCU=t2313
 
 # Name of our project
 # (use a single word, e.g. 'myproject')
-PROJECTNAME=dimmer
+PROJECTNAME=slave
 
 # Source files
 # List C/C++/Assembly source files:
 # (list all files to compile, e.g. 'a.c b.cpp as.S'):
 # Use .cc, .cpp or .C suffix for C++ files, use .S 
 # (NOT .s !!!) for assembly source code files.
-PRJSRC=fakedelay.c spi.c zc.c dimmer.c
+PRJSRC=fakedelay.c spi.c zc.c slave.c
 
 # additional includes (e.g. -I/path/to/mydir)
 INC=-I.
