--- a/src/master/Makefile
+++ b/src/master/Makefile
@@ -79,14 +79,14 @@ PROGRAMMER_MCU=m168
 
 # Name of our project
 # (use a single word, e.g. 'myproject')
-PROJECTNAME=transceiver
+PROJECTNAME=master
 
 # Source files
 # List C/C++/Assembly source files:
 # (list all files to compile, e.g. 'a.c b.cpp as.S'):
 # Use .cc, .cpp or .C suffix for C++ files, use .S 
 # (NOT .s !!!) for assembly source code files.
-PRJSRC=fakedelay.c usart.c spi.c adc.c transceiver.c
+PRJSRC=fakedelay.c usart.c spi.c adc.c master.c
 
 # additional includes (e.g. -I/path/to/mydir)
 INC=-I.
